<resources>
    <string name="app_name">Miner</string>
    <string name="title_activity_maps">Miner</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="frequency">Mobile Sensor Frequency</string>
    <string name="ipset">TX2 Address</string>
    <string name="command">GetLog</string>
    <string name="command2">Send Command</string>
    <string name="Config">TX2 Config</string>
    <string name="probabilty">Detection Probabilty</string>
    <string name="cameraFrequency">Camera Frequency</string>
    <string name="envsensorFrequency">Envsensor Frequency</string>
    <string name="whitebalance">White Balance</string>
    <string name="logLevel">Log Level</string>
    <string name="imagesize">Image Size</string>
    <string name="killProgram">Kill Program</string>
    <string name="autoExposure">Exposure</string>
    <string name="obdprotocols">OBD Protocols</string>
    <string name="pref_gps_category" translatable="false">gps_category</string>
    <string name="text_bluetooth_nodevice">No Bluetooth device selected</string>
    <string name="notification_action">Tap to open OBD-Reader</string>
    <string name="service_starting">Starting OBD connection..</string>
    <string name="service_started">OBD connection has started.</string>
    <string name="service_stopped">OBD connection has stopped.</string>
    <string name="pref_upload_category_title">Data Upload</string>
    <string name="pref_upload_category" translatable="false">upload_category</string>
    <string name="title_pref_bluetooth" translatable="false">Bluetooth</string>
    <string name="title_pref_gps" translatable="false">GPS</string>
    <string name="title_pref_obd">OBD Preferences</string>
    <string name="pref_upload_title">Enable Data Upload</string>
    <string name="pref_upload_summaryOff">Enable http data upload</string>
    <string name="pref_upload_summaryOn">Disable http data upload</string>
    <string name="pref_upload_url_title">Upload URL</string>
    <string name="pref_upload_url_summary">POST URL that will accept real-time data</string>
    <string name="pref_vehicle_id_title">Vehicle ID</string>
    <string name="pref_vehicle_id_summary">Optional unique id of this vehicle, used with uploaded data</string>
    <string name="pref_bluetooth_title">Enable Bluetooth</string>
    <string name="pref_bluetooth_summaryOff">Turn on Bluetooth</string>
    <string name="pref_bluetooth_summaryOn">Turn off Bluetooth</string>
    <string name="pref_bluetooth_list_devices_summary">List of paired bluetooth devices.</string>
    <string name="pref_bluetooth_list_devices_title">Bluetooth Devices</string>
    <string name="pref_gps_category_title">Enable GPS</string>
    <string name="pref_gps_category_summaryOff">Turn on GPS</string>
    <string name="pref_gps_category_summaryOn">Turn off GPS</string>
    <string name="pref_gps_update_period_title">Update Period in Seconds</string>
    <string name="pref_gps_update_period_summary">The length of time between querying new position in seconds</string>
    <string name="pref_gps_distance_period_title">Update Period in Meters</string>
    <string name="pref_gps_distance_period_summary">Min Distance between location updates, in meters</string>
    <string name="pref_obd_protocols_title">OBD Protocol</string>
    <string name="pref_obd_protocols_summary">Select OBD Protocol to use</string>
    <string name="pref_imperial_units_title">Imperial Units</string>
    <string name="pref_imperial_units_summaryOff">Enable imperial units</string>
    <string name="pref_imperial_units_summaryOn">Go back to metric units</string>
    <string name="pref_obd_update_period_title">Update Period in Seconds</string>
    <string name="pref_obd_update_period_summary">The length of time between querying vehicle data in seconds</string>
    <string name="pref_max_fuel_econ_title">Maximum Fuel Economy Value</string>
    <string name="pref_max_fuel_econ_summary">Any fuel economy values larger than this will be thrown out</string>
    <string name="pref_volumetric_efficiency_dialog_title">Volumetric Efficiency (eg 0.85)</string>
    <string name="pref_volumetric_efficiency_summary">Used for fuel economy on vehicles without MAF sensor</string>
    <string name="pref_volumetric_efficiency_title">Volumetric Efficiency</string>
    <string name="pref_engine_displacement_title">Engine Displacement (liters)</string>
    <string name="pref_engine_displacement_summary">Used for fuel economy on vehicles without MAF sensor</string>
    <string name="pref_reader_config_title">Reader Config Commands</string>
    <string name="pref_reader_config_summary">Commands to configure bluetooth reader, separate with new line</string>
    <string name="pref_dirname_dialogTitle">Choose the name of the directory to save the logs</string>
    <string name="pref_dirname_title">Directory name</string>
    <string name="pref_dirname_summary">Name of the directory where to save the files</string>
    <string name="pref_dev_email_title">Developer Email</string>
    <string name="pref_dev_email_summary">Logs will be emailed to this address</string>
    <string name="title_pref_commands">OBD Commands</string>
    <string name="title_pref_commands_summary">Select the commands you would like to see in real-time.</string>
    <string name="title_pref_commands_title">OBD Commands</string>
    <string name="title_pref_full_logging"> Full logging configuration </string>
    <string name="pref_enable_full_logging_summary"> Enables full offline logging with upload</string>
    <string name="pref_enable_full_logging_title"> Enable full logging </string>
    <string name="default_dirname_full_logging">OBDReaderLogs</string>
    <string name="status_gps_not_used">not used</string>
    <string name="status_bluetooth_connected">connected</string>
    <string name="status_bluetooth_error_connecting">connection failed</string>
    <string name="status_bluetooth_disabled">disabled</string>
    <string name="status_bluetooth_ok">ready</string>
    <string name="status_bluetooth_connecting">connecting&#8230;</string>
    <string name="status_gps_started">started</string>
    <string name="status_gps_stopped">stopped</string>
    <string name="status_gps_fix">fix acquired</string>
    <string name="status_gps_no_support">not available</string>
    <string name="status_gps_ready">ready</string>
    <string name="status_obd_disconnected">disconnected</string>
    <string name="status_obd_no_support">NA</string>
    <string name="status_obd_data">receiving data&#8230;</string>
    <string name="text_bluetooth_disabled">You have Bluetooth disabled. Please enable it (using Mock service)</string>
    <string name="text_no_bluetooth_id">Sorry, your device doesn\'t support Bluetooth</string>
    <string name="text_no_orientation_sensor">Orientation sensor missing?</string>
    <string name="text_no_gps_support">Sorry, your device doesn\'t support or has disabled GPS.</string>
    <string name="text_save_trip_not_available">Sorry, trip will not be saved.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="obd_options">OBD options </string>
    <string name="obd_opt_description">Options for OBD protocol / vehicle communication </string>
    <string name="select_medium">Adapter type …</string>
    <string name="secure_connect_description">Use encrypted Bluetooth connection</string>
    <string name="secure_connect">Secure connection</string>
    <string name="device_address_description">ELM device network IP address</string>
    <string name="device_address">ELM IP address</string>
    <string name="device_port_description">ELM device network IP port</string>
    <string name="device_port">ELM IP port</string>
    <string name="select_protocol">Preferred OBD protocol </string>
    <string name="items_for_display">Data items to display</string>
    <string name="items_for_display_descr">Select all data items to be displayed …</string>
    <string name="elm_options">ELM options</string>
    <string name="elm_custom_init">ELM custom init</string>
    <string name="elm_custom_init_descr">ELM custom initialisation commands</string>
    <string name="elm_adaptive_timing">ELM adaptive timing</string>
    <string name="elm_adaptive_timing_descr">Allow adaptive timing handling in ELM drivers?</string>
    <string name="elm_timeout_descr">Minimum timeout in [ms] to wait for ELM responses</string>
    <string name="min_elm_timeout">Min. ELM timeout [ms]</string>
    <string name="elm_reset_on_nrc">Reset on NRC</string>
    <string name="elm_reset_on_nrc_descr">Reset ELM adapter on NRC error?</string>
    <string name="data_disable_max">Data item disable limit</string>
    <string name="data_disable_max_description">Number of invalid consecutive data responses before item will be disabled</string>
    <string-array name="empty" translatable="false"/>
    <string name="select_extension">Select .csv extension file …</string>
    <string name="unabletoconnect">Unable to connect device</string>
    <string name="connectionlost">Device connection was lost</string>
    <string name="keep_screen_on">Keep main screen on</string>
    <string name="keep_screen_on_description">Do not turn OFF screen if main/data screen is on display</string>
    <string name="development_options">Development options</string>
    <string name="dev_opt_description">Options for debugging and customisation</string>
    <string name="extension_files">Protocol customisation files (csv)</string>
    <string name="conversions">Data Conversions</string>
    <string name="data_items">Data items</string>
    <string name="fault_codes">Fault codes</string>
    <string name="extension_loading">Customisation loading</string>
    <string name="check_cust_settings">Please check your customisation settings\n</string>
    <string name="plugin_manager">Plugin manager</string>
    <string name="configure">Configure</string>
    <string name="select_fault_code">Select fault code …</string>
    <string name="refreshing">scanning …</string>
    <string name="devices_found">%s USB device(s) found</string>
    <string name="day_night_mode">Day/Night view mode</string>
    <string name="night_mode_description">Set display to dark background</string>
    <string name="night_mode">Night mode</string>
    <string name="disable_elm_cmds">Disabled ELM commands</string>
    <string name="disable_elm_cmds_descr">enable/disable ELM commands</string>
    <string name="disabled">disabled</string>
    <string name="enabled">enabled</string>
    <string name="select_ecu_addr">Select ECU address …</string>
    <string name="disconnect">Disconnect</string>
    <string name="reset_preselections">Reset last pre-selections</string>
    <string name="use_last_settings_description">Use last settings at startup (BT address, ECU address, Display items …)</string>
    <string name="use_last_settings">Use last settings</string>
    <string name="common_settings_description">Common settings for app control</string>
    <string name="last_none">NONE</string>
    <string name="common_settings">Common settings</string>
</resources>