<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dw_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--主布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/activity_map"></include>
    </LinearLayout>
    <!--侧滑菜单-->
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ccffffff"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Setting"
            android:textSize="16dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_obd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/obdprotocols" />

        <TextView
            android:id="@+id/tv_command2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/command2" />

        <TextView
            android:id="@+id/tv_ip"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/ipset" />

        <TextView
            android:id="@+id/config"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Config" />

        <ScrollView
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/weight"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/exposure"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/autoExposure"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/logLevel"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/logLevel"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/imagesize"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/imagesize"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/killProgram"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/killProgram"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/whitebalance"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/whitebalance"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/cameraFrequency"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/cameraFrequency"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/probabilty"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/probabilty"
                    android:textSize="12sp"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tv_frequency"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/frequency" />

        <ListView
            android:id="@+id/lv_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:visibility="gone"></ListView>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
